update-manager (1:0.69) UNRELEASED; urgency=low

  * Change version text from 7.04 to 7.10 in KDE frontend

 -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 07 Aug 2007 10:57:48 +0100

update-manager (1:0.68) gutsy; urgency=low

  * UpdateManager/DistUpgradeFetcherCore.py:
    - be extra paranoid when using ${countrymirror} 
  * DistUpgrade/DistUpgradeControler.py:
    - support countrymirror in prerequists.sources.list file
      too
  * UpdateManager/Common/utils.py:
    - added country_mirror() function

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 06 Aug 2007 17:48:43 +0200

update-manager (1:0.67) gutsy; urgency=low

  * UpdateManager/UpdateManager.py,
    tests/test_update_origin.py:
    - when checking for update category (Security, Important, ...)
      not only check candidateVersion but all intermediate versions
      too
    - added test for the new matcher behaviour
  * DistUpgrade/DistUpgradeControler.py:
    - fix PreRequists fetching 
    - better error checking/logging
  * DistUpgrade/DistUpgradeViewGtk.py,
    DistUpgrade/DistUpgradeViewKDE.py,:
    - improve error message when a package fails to install
      (thanks to Chris Jones)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - show "cancel" button while fetching stuff
  * UpdateManager/DistUpgradeFetcher.py, 
    UpdateManager/DistUpgradeFetcherCore.py:
    - support ${countrymirror} in meta-release information
  * setup.py, setup.cfg:
    - updated for new python-distutils-extra

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 25 Jul 2007 20:04:04 +0200

update-manager (1:0.66) gutsy; urgency=low

  * DistUpgrade/DistUpgradeControler.py:
    - support listing and fetching of upgrade PreRequists
    - transition archive.canonical.com to new layout
    - mark evms as obsolete if it is not in use
    - transition powerpc users to ports.ubuntu.com
    - implement Depends checking for the selected
      View
  (as speced in https://wiki.ubuntu.com/UpgradePrerequisites)