@@ -438,3 +438,6 @@ http://nz2.archive.ubuntu.com/ubuntu/
 http://ubuntu.grn.cat/ubuntu/
 http://ubuntu.positive-internet.com/ubuntu/
 http://ubuntu-archive.polytechnic.edu.na/
+http://ubuntu.media.mit.edu/ubuntu/
+http://ftp.ncnu.edu.tw/Linux/ubuntu/ubuntu/
+http://ftp.iut-bm.univ-fcomte.fr/ubuntu/
