@@ -32,7 +32,7 @@ class testOriginMatcher(unittest.TestCase):
             pkg = self.cache[pkgname]
             self.assertEqual(self.cache.matchPackageOrigin(pkg, matcher),
                              matcher[("dapper-security","Ubuntu")],
-                             "pkg '%s' is not in dapper-security but in '%s' instead" % (pkg.name, self.cache.matchPackageOrigin(pkg, matcher)))
+                             "pkg '%s' is not in dapper-security but in '%s' instead" % (pkg.name, str(self.cache.matchPackageOrigin(pkg, matcher))))
         
 
     def testOriginMatcherWithVersionInUpdatesAndSecurity(self):
