@@ -19,8 +19,6 @@ glade-gnome-2
 heartbeat
 heartbeat-dev
 ia32-libs
-kmplayer-base
-kmplayer-konq-plugins
 libdb3
 libdb3-util
 libdm0
