@@ -1,8 +1,15 @@
 update-manager (1:0.69) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
+  * UpdateManager/Core/MetaRelease.py:
+    - remove zero size meta-release files (LP: #127263)
+  * utils/demoted.cfg:
+    - updated to current gutsy
+
+  [ Jonathan Riddell ]
   * Change version text from 7.04 to 7.10 in KDE frontend
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 07 Aug 2007 10:57:48 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 08 Aug 2007 12:41:02 +0200
 
 update-manager (1:0.68) gutsy; urgency=low
 
